clean up theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: wpfolio
+Theme Name: WPFolio Four
 Theme URI: http://underscores.me/
 Author: Lara Schenck
 Author URI: http://notlaura.com
