--- a/sass/variables-site/_typography.scss
+++ b/sass/variables-site/_typography.scss
@@ -3,3 +3,16 @@ $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+
+// Sizing Scale
+
+$size-base: 1.1rem;
+$size-sml: 0.85rem;
+
+$size-h1:   $size-base*2.4;
+$size-h2:   $size-base*2;
+$size-h3:   $size-base*1.8;
+$size-h4:   $size-base*1.4;
+$size-h5:   $size-base;
+$size-h6:   $size-base*0.9;
+
