--- a/sass/style.scss
+++ b/sass/style.scss
@@ -52,6 +52,11 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "normalize";
 
 /*--------------------------------------------------------------
+# Grid
+--------------------------------------------------------------*/
+@import "modules/flexbox-grid";
+
+/*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
 @import "typography/typography";
