comment out default layout styles

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -1,5 +1,6 @@
-// @import "../layout/content-sidebar";
+@import "../layout/content-sidebar";
 // @import "../layout/sidebar-content";
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
@@ -14,3 +15,4 @@
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
+
