--- a/sass/modules/_flexbox-grid.scss
+++ b/sass/modules/_flexbox-grid.scss
@@ -19,6 +19,15 @@ $breakpoints:
   lg 75em 71rem !default;
 $flexboxgrid-max-width: 1200px !default;
 
+
+// Custom WP size variables - min-width
+$screen-xs:     28em;
+$screen-sm:     48em;
+$screen-md:     62em;
+$screen-lg:     75em;
+
+
+
 //
 // -- Stop editing -- //
 //
@@ -30,6 +39,7 @@ $half-gutter-width: $gutter-width * .5;
   box-sizing: border-box;
   max-width: $flexboxgrid-max-width;
   margin: 0 auto;
+  width: 95%;
 }
 
 .container-fluid {
