--- a/sass/mixins/_mixins-master.scss
+++ b/sass/mixins/_mixins-master.scss
@@ -1,3 +1,33 @@
+// Media Queries
+// http://css-tricks.com/conditional-media-query-mixins/
+
+// A breakpoint mixin is super useful for nesting within other selectors:
+
+$MQs: true;
+
+@mixin bp($point) {
+  @if ($MQs) {
+    // These screen sized map to the screen variables in _varibles.scss
+    $bp-xs: "(min-width: #{$screen-xs})";
+    $bp-sm: "(min-width: #{$screen-sm})";
+    $bp-md: "(min-width: #{$screen-md})";
+    $bp-lg: "(min-width: #{$screen-lg})";
+
+    @if $point == xs {
+      @media #{$bp-xs} { @content; }
+    }
+    @else if $point == sm {
+      @media #{$bp-sm} { @content; }
+    }
+    @else if $point == md {
+      @media #{$bp-md} { @content; }
+    }
+    @else if $point == lg {
+      @media #{$bp-lg} { @content; }
+    }
+  }
+}
+
 // Rem output with px fallback
 @mixin font-size($sizeValue: 1) {
 	font-size: ($sizeValue * 16) * 1px;
