--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -35,3 +35,14 @@
   font-size: $size-base;
 }
 
+
+// Home Page
+
+.wpf-home-image {
+  width: 100%;
+  opacity: 0;
+}
+
+.page-template-page-home {
+
+}
