--- a/sass/variables-site/_typography.scss
+++ b/sass/variables-site/_typography.scss
@@ -4,7 +4,7 @@ $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
 
-// WPFolio Sizing Scale
+// Sizing Scale
 
 $size-base: 1.1rem;
 $size-sml: 0.85rem;
