--- a/sass/layout/_content-sidebar.scss
+++ b/sass/layout/_content-sidebar.scss
@@ -1,25 +1,25 @@
-@include bp(sm) {
 
-  .content-area {
-    float: left;
-    padding-right: $size-base;
-    margin: 0 (-$size__site-sidebar) 0 0;
-    width: $size__site-main;
-  }
+@include bp(md) {
 
-  .site-main {
-    margin: 0 $size__site-sidebar 0 0;
-  }
+  // .content-area {
+  //   float: left;
+  //   margin: 0 (-$size__site-sidebar) 0 0;
+  //   width: $size__site-main;
+  // }
 
-  .site-content .widget-area {
-    float: right;
-    overflow: hidden;
-    width: $size__site-sidebar;
-  }
+  // .site-main {
+  //   margin: 0 $size__site-sidebar 0 0;
+  // }
 
-  .site-footer {
-    clear: both;
-    width: $size__site-main;
-  }
+  // .site-content .widget-area {
+  //   padding-left: $size-base;
+  //   float: right;
+  //   overflow: hidden;
+  //   width: $size__site-sidebar;
+  // }
 
+  // .site-footer {
+  //   clear: both;
+  //   width: $size__site-main;
+  // }
 }
