--- a/sass/navigation/_links.scss
+++ b/sass/navigation/_links.scss
@@ -1,5 +1,6 @@
 a {
 	color: $color__link;
+	text-decoration: none;
 
 	&:visited {
 		color: $color__link-visited;
@@ -17,5 +18,3 @@ a {
 		outline: 0;
 	}
 }
-
-
