--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -1,8 +1,22 @@
 .widget {
 	margin: 0 0 1.5em;
 
+  li, p {
+    font-size: $size-sml;
+  }
+
 	/* Make sure select elements fit in widgets. */
 	select {
 		max-width: 100%;
 	}
+
+  > ul {
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+  }
+}
+
+.widget-title {
+  font-size: $size-base;
 }
